--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,28 +1,28 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?hqliythu#1" target="_blank">首页</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/1?zweitua" target="_blank">动态网</a> | <a href="https://dme0bxbvomkno.cloudfront.net/2?faupeazy" target="_blank">大纪元</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/4?cylqub" target="_blank">看中国</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/pHh5q?nhudddzyk" target="_blank">新生网</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/tktpt?zpfwyrrid" target="_blank">阿波罗网</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/Mjpvu?foduabeu" target="_blank">干净世界</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/10?vculrwp" target="_blank">退党服务</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/Rffqf?thwaui" target="_blank">明慧广播</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/nw9Vn?jwpohzr" target="_blank">传奇时代</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/AF9AG?thcbiy" target="_blank">新境界影视</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/zqMQA?nnfpret" target="_blank">文昭谈论</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/7?xtrpua" target="_blank">明慧</a></p><p><a href="https://d1fejrztdgsube.cloudfront.net/9?zbjswqr" target="_blank">大法</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/3?awuwohaor" target="_blank">新唐人</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/obAhT?otatqpepj" target="_blank">人民报</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/xXNHu?ytgfp" target="_blank">放光明</a> | <a href="https://duxu97yt14q37.cloudfront.net/5?tqgll" target="_blank">新纪元</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/6?inaukpkgu" target="_blank">希望之声</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/11?lolirnae" target="_blank">无界网络</a> | <a href="https://d3vg08phoazui6.cloudfront.net/Pueji?mooae" target="_blank">追查国际</a> | <a href="https://d2184d78prq5kd.cloudfront.net/16?seeyngfa" target="_blank">明慧之窗</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/LdvzZ?yjpxhbe" target="_blank">细语人生</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/fBn3r?feqvfuvdo" target="_blank">新世纪影视</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/PUWMb?srdkysr" target="_blank">江峰时刻</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/8?susszd" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?nvmxsnupw#1" target="_blank">首页</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/1?hxlfpwinh" target="_blank">动态网</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/2?dkzsz" target="_blank">大纪元</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/4?pbympeno" target="_blank">看中国</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/pHh5q?jalbopb" target="_blank">新生网</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/tktpt?wzwdkr" target="_blank">阿波罗网</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/Mjpvu?opzwivzti" target="_blank">干净世界</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/10?mhntpxw" target="_blank">退党服务</a> | <a href="https://d2p23c289x62lr.cloudfront.net/Rffqf?enhgokrzk" target="_blank">明慧广播</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/nw9Vn?cvgpyc" target="_blank">传奇时代</a> | <a href="https://d8jw662akk94j.cloudfront.net/AF9AG?wiafqzc" target="_blank">新境界影视</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/zqMQA?uauff" target="_blank">文昭谈论</a> | <a href="https://d3b82atanl11dg.cloudfront.net/7?fswmfl" target="_blank">明慧</a></p><p><a href="https://d3q99y09eaol9n.cloudfront.net/9?fjeov" target="_blank">大法</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/3?onozr" target="_blank">新唐人</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/obAhT?zjkunqjmd" target="_blank">人民报</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/xXNHu?kjgapsb" target="_blank">放光明</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/5?gcsoxxkc" target="_blank">新纪元</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/6?ahoanosg" target="_blank">希望之声</a> | <a href="https://d1u99il8548gs4.cloudfront.net/11?cagnogau" target="_blank">无界网络</a> | <a href="https://d337p4rc38c0de.cloudfront.net/Pueji?tgrsnc" target="_blank">追查国际</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/16?cmbdugvbm" target="_blank">明慧之窗</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/LdvzZ?ktrlx" target="_blank">细语人生</a> | <a href="https://dgk92ykceobaf.cloudfront.net/fBn3r?xplvbqoi" target="_blank">新世纪影视</a> | <a href="https://duxu97yt14q37.cloudfront.net/PUWMb?wqolglnim" target="_blank">江峰时刻</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/8?uvuhz" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422475.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422500-86352c8a4554cc2b4a5353b21e4ad92f-320x200.png"><p align="center">沈阳知名市场附近爆炸 威力强大 一片混乱</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422475.md#1" title="沈阳知名市场附近爆炸 威力强大 一片混乱""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422500-86352c8a4554cc2b4a5353b21e4ad92f-320x200.png">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422478.md#1" title="神韵莅临尤金 观众感悟神性是人生重要核心""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422479-250126030913100815-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422251.md#1" title="小红书“郑州帮”批量制造假老外的大骗局""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422317-974168c8d19a93bda0e734d8afe29fdf-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422355.md#1" title="神韵给世界带来希望 维也纳连两场一票难求""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422362-250125120127100055-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422195.md#1" title="中国锂业双雄业绩皆亏 赣锋锂业预亏高达21亿""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/03/id14211508-000_32JR97A-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422323.md#1" title="神韵法国波尔多首场爆满 商界精英赞佩""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422326-250125193145100615-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422248.md#1" title="一文看懂 川普废除DEI如何波及美公司""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14421472-GettyImages-2195559727-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422235.md#1" title="神韵牛津五场全爆满 知名音乐家赞演出纯洁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422240-250125133806100101-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421775.md#1" title="吃草饲牛肉或榖饲牛肉 哪种更健康？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14421827-grain-grass-fed-1080x720-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422163.md#1" title="明真相华人新年送祝福 给李洪志大师拜年""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/02/id14177364-Untitled-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422081.md#1" title="美新任防长海格塞斯：用实力实现和平""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422087-AFP__20250125__36VZ7EN__v1__Preview__UsPolDefenseHegseth-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421775.md#1" title="草饲牛肉和榖饲牛肉有什么区别？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14421827-grain-grass-fed-1080x720-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422136.md#1" title="CIA局长：为总统提供最准确的中国情报""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14420882-AFP__20250116__2193463145__v4__Preview__SenateConfirmationHeldToConsiderJohnRatcliff-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422129.md#1" title="神韵展现真正的中国的形象 东京观众盛赞""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422140-250125095722100863-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422131.md#1">今夏 你在Costco美食广场喝的汽水会不同</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422131.md#1">今夏 你在Costco美食广场喝的汽水会不同</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422475.md#1">沈阳知名市场附近爆炸 威力强大 一片混乱</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422327.md#1">【翻墙必看】百万珠宝首饰只卖60元 怎么回事？</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422402.md#1">上海扩大禁放烟花爆竹范围 购买者须实名登记</a><br>
+:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422402.md#1">上海扩大禁放烟花爆竹范围 购买者须实名登记</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422426.md#1">为什么睡觉前不应该喝酒？ 专家细说分明</a><br>
 :clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422251.md#1">小红书“郑州帮”批量制造假老外的大骗局</a><br>
-:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422372.md#1">过年拼多赚点钱 大陆外卖小哥选择不返乡</a><br>
-:clock8: <em>7小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421904.md#1">F-15E战机配最先进电子战系统 达重要里程碑</a><br>
+:clock8: <em>7小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422372.md#1">过年拼多赚点钱 大陆外卖小哥选择不返乡</a><br>
+:clock8: <em>8小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421904.md#1">F-15E战机配最先进电子战系统 达重要里程碑</a><br>
 :clock8: <em>8小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422353.md#1">济南一小鹏汽车起火烧成铁架 宝马等9车全烧</a><br>
-:clock8: <em>8小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422195.md#1">中国锂业双雄业绩皆亏 赣锋锂业预亏高达21亿</a><br>
+:clock8: <em>9小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422195.md#1">中国锂业双雄业绩皆亏 赣锋锂业预亏高达21亿</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421046.md#1">北京推保险资金入市 专家吁股民加紧逃离</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421421.md#1">疑似中共公安勒索企业家视频曝光 开口要1亿</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418930.md#1">中国各省下调2025年CPI目标 专家解析</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418191.md#1">25年来 法轮功学员遭中共精神病院摧残（下）</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418709.md#1">袁红冰：中共密谋在台湾问题上与美国交易</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dnhr9g6lt4n36.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dnhr9g6lt4n36.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: </div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1alkm6rqhg46g.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1alkm6rqhg46g.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,007</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共  人
+!共 441,989,041 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421941.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14413381-738797-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421941.md#1">肝25万肾20万 天津卫健委对器官明码标价惹议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421353.md#1">中国异议人士“被精神病”案例大增</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419429.md#1">缅北电诈亲历者：无业绩“猪仔”遭摘器官</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418302.md#1">【新闻大破解】收买媒体大外宣 中共对美超限战</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414328.md#1">25年来 法轮功学员遭中共精神病院摧残（上）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417787.md#1">川普上任 上海四维权人士请求关注中国人权</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422210.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2022/02/id13573475-GettyImages-129599725-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422210.md#1">中国白酒市场新年内卷 经销商努力保本经营</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422224.md#1">中国电影市场低迷 多家影视公司去年业绩预亏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422153.md#1">中国三大航空央企去年合计预亏最高达64亿</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421951.md#1">中国2024非税收入大增25% 罚没收入增近15%</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421933.md#1">河南男子卖牛途中小牛突然下跪 视频引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421711.md#1">贵州男带妻子骑摩托2400多公里返乡过年</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421668.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14409128-737420-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421668.md#1">余茂春：世界须抛弃脚踩中美两条船幻想</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422032.md#1">多重因素促使美国律所纷纷离开中国</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421934.md#1">卢比奥与王毅通话关注中共胁迫 台外交部回应</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421496.md#1">【名家专栏】中共控制巴拿马运河威胁美国安全</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421597.md#1">TikTok部分美国员工纷纷跳槽至Meta和谷歌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421578.md#1">克宫：普京准备与川普通话 望启动核削减谈判</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422138.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14408431-8452cb92eafa75d617a0850fe1c74980-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422138.md#1">大陆爆新一波疫情 专家：可能是新病毒</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421722.md#1">寒潮暴雪大雾来袭 中国多地高速封闭 列车停运</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421841.md#1">深圳日本男童遇害案 凶犯被判死刑 陆媒消音</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420890.md#1">中国游客在北海道铁轨拍照 被列车撞亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420494.md#1">广东一岁男孩吃果冻窒息身亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420314.md#1">四川内江市4.0级地震 网民：一家人被摇醒了</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422532.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422532.md#1">三退声明精选（2025/01/25）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422017.md#1">60岁以上不能独立承租 中国老年人租房陷困境</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421805.md#1">河南南阳一头牛闯进理发店 吓跑所有顾客</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421442.md#1">大陆消费者投诉山姆店车厘子出现发霉烂果</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421414.md#1">中国知名艺术家被控抄袭输官司 登报道歉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421258.md#1">疑陷感情纠纷 陆男持刀捅死一对夫妇后自残</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408670.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/IMG_7239-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408670.md#1">瑞士顶尖学府招生筛查中国高校 被指酝酿多年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399580.md#1">中国又一民营火箭发射失败</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14398910.md#1">从车企到光伏业 中国更多领域陷入“内卷”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14397974.md#1">中国考研人数再减 传大考首日60万人弃考</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397882.md#1">日本放宽中国游客赴日要求 将推出10年签证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396531.md#1">崔健乐队知名萨克斯手刘元病逝 终年64岁</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14409355.md#1">【独家】中共欲藉美国定罪法轮功 逃脱世纪人权罪责</a><br>
